--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,4 +1,3 @@
-<div id="fb-root"></div>
 <div class="main-container">
   <h1 id="welcome">Welcome to Viagg.io</h1>
   <% if current_user %>
@@ -14,8 +13,6 @@
     </h3>
     <a id="sign_in" href="/auth/facebook"><i class="icon-facebook" style="padding-right:20px"></i> Sign in with Facebook </a> 
     <p class="warning">Closed beta. Invite Only.<p>
+    <script>Facebook.initialize();</script>
   <% end %>
 </div>
-<script>
-  Facebook.initialize();
-</script>
