--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<div id="fb-root"></div>
+<div id="fb-root" data-app="<%= ENV['FACEBOOK_APP_ID'] %>"></div>
 <nav>
   <div id='title_link'><%= link_to 'Viagg.io', root_url %></div>
   <% if current_user %>
