build overlay after map

--- a/app/assets/javascripts/gmap.js.erb
+++ b/app/assets/javascripts/gmap.js.erb
@@ -15,16 +15,18 @@ var gmap = {
 
   onScriptLoad: function(inputs) {
     google.maps.visualRefresh = true;
-
     this.geocode(this.location);
-    gmap.overlay = gmap.buildOverlay();
   },
 
   geocode: function(location) {
     var geocoder = new google.maps.Geocoder();
-    geocoder.geocode({ 'address': location }, function(results) {
-      gmap.map = gmap.buildMap(results[0].geometry.location);
-    });
+    geocoder.geocode({ 'address': location }, gmap.onLocationReady);
+  },
+
+  onLocationReady: function(geocodedLocations) {
+    gmap.map = gmap.buildMap(geocodedLocations[0].geometry.location);
+    gmap.overlay = gmap.buildOverlay();
+
   },
 
   buildMap: function(defaultCenter) {
