--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -4,3 +4,5 @@ $black: #222;
 $white: #eee;
 $nav: #1FB5BE;
 $main-font: 'Asap', 'Helvetica', sans-serif;
+$trip-button: #e74c3c;
+$trip-button-hover: #c0392b;
