moved delete link to edit page for trips

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -16,7 +16,7 @@ a {
 h1 {
   font-family: $main-font;
   font-size: 72px;
-  margin: 72px 0;
+  margin: 72px 0 20px;
 }
 ul {
   list-style-type: none;
