--- a/app/assets/stylesheets/trips.css.scss
+++ b/app/assets/stylesheets/trips.css.scss
@@ -181,7 +181,7 @@ form.edit_trip {
   font-size: 32px;
   padding: 20px;
   width: 350px;
-  margin: auto;
+  margin: 30px auto 30px auto;
   border: none;
   background: $trip-button;
   color: $white;
