--- a/app/views/trips/edit.html.erb
+++ b/app/views/trips/edit.html.erb
@@ -69,8 +69,8 @@
   <%= f.submit 'Submit' %>
   <% end %>
 
-  <div class="view-trip-button">
-    <%= link_to 'View your trip!', trip_path(@trip)  %>
+  <div>
+    <%= link_to 'View your trip!', trip_path(@trip),  class: "view-trip-button"  %>
   </div>
 
 
