--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -16,7 +16,7 @@
 <div class="photos-wrapper">
   <% if @photos %>
     <% @photos.each do |photo|%>
-      <%= image_tag photo.url, class: 'photo', data: {lat: photo.lat, lng: photo.long}%>
+      <%= image_tag photo.url, class: 'photo', data: {lat: photo.lat, lng: photo.long, colors:{color1:photo.palette.color1, color2:photo.palette.color2, color3:photo.palette.color3, color4:photo.palette.color4, color5:photo.palette.color5, color6:photo.palette.color6}} %>
       <% if photo.caption != "" %>
         <div class="photo-caption">
           <%= photo.caption %>
