--- a/app/assets/javascripts/gmap_locator.js.erb
+++ b/app/assets/javascripts/gmap_locator.js.erb
@@ -1,6 +1,7 @@
 var GmapLocator = function(lat, lng, formId, defaultCenter) {
   this.defaultCenter = defaultCenter;
   this.lat = lat;
+  console.log(this.lat);
   this.lng = lng;
   this.formId = formId;
 };
