--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>JourneyTracker</title>
+  <title>Viaggio</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <link href='http://fonts.googleapis.com/css?family=Asap:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div id="fb-root" data-app="<%= ENV['FACEBOOK_APP_ID'] %>"></div>
-<nav>
+<nav class="title-bar">
   <div id='title_link'><%= link_to 'Viagg.io', root_url %></div>
   <% if current_user %>
     <div id='username_link'>Signed in as <%=link_to current_user.name, user_path(current_user) %> |
