--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -6,13 +6,11 @@
       <p><%= link_to "Or check out all trips", trips_path  %></p>
       <p><%= link_to "Or check out all users", users_path  %></p>
     </div>
-  <% else %>
-    <h3 id="explanation">
-      <p><em>Viaggio</em>'s Italian for "travel."</p>
-      <p><em>Viagg.io</em> lets you share your travel photos and stories.</p>
-    </h3>
+  <% else %>  
+    <p class="note">(It's Italian for "travel".)</p>
+    <p id="explanation">Tell your travel stories with immersive photos and maps.</p>
     <a id="sign_in" href="/auth/facebook"><i class="icon-facebook" style="padding-right:20px"></i> Sign in with Facebook </a> 
-    <p class="warning">Closed beta. Invite Only.<p>
+    <p class="note">Closed beta. Invite Only.<p>
     <script>Facebook.initialize();</script>
   <% end %>
 </div>
