--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 <nav class="title-bar">
   <div id='title_link'><%= link_to 'Viagg.io', root_url %></div>
   <% if current_user %>
-    <div id='username_link'>Signed in as <%=link_to current_user.name, user_path(current_user) %> |
+    <div id='username_link'>Signed in as <%=link_to current_user.name, trips_path %> |
     <%= link_to "Sign out", signout_path, id: "sign_out" %></div>
   <% end %>
 </nav>
@@ -28,6 +28,6 @@
 
 <script>
   $(document).ready(function() {
-    
+
   });
 </script>
