--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -3,6 +3,9 @@
   <p class="note">(It's Italian for "travel".)</p>
   <p id="explanation">Tell your travel stories with immersive photos and maps.</p>
   <a id="sign_in" href="/auth/facebook"><i class="icon-facebook" style="padding-right:20px"></i> Sign in with Facebook </a>
-  <p class="note">Open beta!<p>
+  <ul>
+    <li><a href='/trips/<%= ENV['EXAMPLE_TRIP_SLUG'] %>'>See an Example</a></li>
+  </ul>
+  <p class="note">Open beta!</p>
   <script>Facebook.initialize();</script>
 </div>
